--- a/style.css
+++ b/style.css
@@ -32,10 +32,16 @@ p {
 
 img {
     float: left;
-    margin-bottom: 100%;
+    margin-bottom: 30PX;
     border-radius: 80px;
     margin-right: 30px;
     margin-left: 30px;
+}
+
+.link {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 h3 {
