--- a/style.css
+++ b/style.css
@@ -32,16 +32,12 @@ p {
 
 img {
     float: left;
-    margin-bottom: 30PX;
+    margin: 30PX;
     border-radius: 80px;
-    margin-right: 30px;
-    margin-left: 30px;
 }
 
 .link {
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    font-size: 30px;
 }
 
 h3 {
