--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 body{
-    font-family: Josefin Sans;
+    font-family: Josefin Sans; 
 }
 
-.container {
+nav {
     background-color: rgb(241, 241, 238);
-    width: auto;
+    width: 100%;
     height: 80px;
     display: flex;
     flex-direction: row; 
     justify-content: center;
+    align-items: center;
 }
 
 .fotter {
@@ -20,12 +21,10 @@ body{
     justify-content: center;
     align-items: center;
 }
+
 p {
    font-size: 18px;
    padding: 5px; 
-   text-decoration: blink;
-   text-align: left;
-   font-family: Josefin Sans;
    font-weight: 350;
    color: rgb(53, 73, 92);
 }
@@ -36,7 +35,7 @@ img {
     border-radius: 80px;
 }
 
-.link {
+.link{
     font-size: 30px;
 }
 
@@ -52,13 +51,8 @@ a {
     color: rgb(53, 73, 92);
 }
 
-.item {
-    color: white;
-    font-size: 15px;
-    padding: 20px;
-    margin: 20px;
-    width: auto;
-    align-items: center;
+a:hover {
+    color: darkseagreen;
 }
 
 .intouch {
@@ -96,14 +90,9 @@ a {
 
 
 .error { 
-    font-family: font-family: Josefin Sans;
+    font-family: Josefin Sans;
     font-size: 30px;
     text-align: center;
-}
-
-.error i {
-    font-size: 60px;
-    color: rgb(248, 80, 80);
 }
 
 .error p {
@@ -117,26 +106,24 @@ a {
     
 }
 
-
-.fa-suse:hover  {
- animation: moveingBug;
- animation: font;
- animation-duration: 20s;
- animation-iteration-count: 5;
+.fa-suse {
+    font-size: 90px;
+    color: rgb(56, 161, 56);
 }
 
-.fa-bugs:hover {
- animation: moveingBug;
+.fa-bugs {
+    font-size: 30px;
+    color: rgb(241, 88, 88);
+
+}
+
+.fa-suse:hover {
+ animation: moveing;
  animation-duration: 10s;
  animation-iteration-count: 5;
 }
 
 
-@keyframes moveingBug {
-    50% {transform: translate(100px,-20px);}
-}
-
-@keyframes font {
-     0%{font-size: 30px;}
-     50%{font-size: 200px;}
+@keyframes moveing {
+    50% {transform: translate(100px,20px);}
 }
