--- a/style.css
+++ b/style.css
@@ -1,49 +1,72 @@
-body{
+* {
     font-family: Josefin Sans; 
+    color: rgb(53, 73, 92);
+    flex-direction: row; 
+    justify-content: center;
+    text-align: left;
 }
 
 nav {
-    background-color: rgb(241, 241, 238);
     width: 100%;
     height: 80px;
+    background-color: rgb(241, 241, 238);
     display: flex;
     flex-direction: row; 
     justify-content: center;
     align-items: center;
 }
 
-.fotter {
+nav th{
+    width: 200px;
+    text-align: center;
+}
+
+.container {
+    width: 800px;
+
+}
+table td, th{
+    padding: 10px;
+}
+
+th {
+    width: 500px;
+    height: 40px;
+    font-size: 18px;
+}
+td {
     height: 50px;
-    background-color: rgb(241, 241, 238);
-    width: auto;
-    font-size: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    font-size: 16px;
+}
+
+footer {
+    text-align: right;
+    margin-right: 30px;
+    font-size: 13px;
+}
+
+footer a {
+font-size: 13px;
 }
 
 p {
-   font-size: 18px;
+   font-size: 16px;
    padding: 5px; 
    font-weight: 350;
-   color: rgb(53, 73, 92);
 }
 
 img {
     float: left;
-    margin: 30PX;
+    margin: 40PX;
     border-radius: 80px;
 }
 
-.link{
-    font-size: 30px;
-}
-
 h3 {
-    padding: 5px;
+    padding: 6px;
     width: 100%;
     background-color: rgb(63, 76, 85);
     color: white;
+    font-size: 16px;
 }
 
 a {
@@ -60,69 +83,19 @@ a:hover {
 }
 
 .flexbox-container {
+    width: auto;
+    height: 100%;
     display: flex;
     margin:10px 20px 10px 20px;
 }
 
-.flexbox-item-1 {
-    width: auto;
-    height: 100%;
-}
-
-.flexbox  {
-    height: min-content;
-     display: flex;
-     margin:10px 20px 10px 20px;
- }
-
-.flexbox-item-2 {
-    height: 1fr;
-    width: 8fr;
-
-}
-
-.flexbox-item-3 {
-    height: 1fr;
-    width: 3fr;
-    margin-left: 50px;
-    text-align: right;
-}
-
-
-.error { 
-    font-family: Josefin Sans;
+i {
     font-size: 30px;
-    text-align: center;
 }
 
-.error p {
-    font-size: 60px;
-    color: rgb(248, 80, 80);
-    text-align: center;
+i:hover {
+    color: darkseagreen;
 }
-
-.from {
-    display: flex;
-    
-}
-
-.fa-suse {
-    font-size: 90px;
-    color: rgb(56, 161, 56);
-}
-
-.fa-bugs {
-    font-size: 30px;
-    color: rgb(241, 88, 88);
-
-}
-
-.fa-suse:hover {
- animation: moveing;
- animation-duration: 10s;
- animation-iteration-count: 5;
-}
-
 
 @keyframes moveing {
     50% {transform: translate(100px,20px);}
