--- a/style.css
+++ b/style.css
@@ -19,7 +19,13 @@ nav {
 }
 
 #Lienchu {
-    margin: 40px 0 40px 0;
+    margin: 20px 0 20px 0;
+    padding-left: 20px ;
+}
+
+#knowledge {
+    margin: 20px 0 20px 0;
+    padding-left: 20px ;
 }
 
 footer p{
@@ -34,27 +40,27 @@ nav th{
 }
 
 .container {
-    width: 800px;
+    width: 600px;
 }
 
 .flexbox-container {
     width: auto;
     height: 100%;
     display: flex;
-    margin:10px 20px 10px 20px;
 }
-td, th{
-    padding: 10px;
+table{
+    padding-left: 20px;
 }
 
 th {
-    width: 500px;
-    height: 40px;
+    height: 30px;
+    width: 450px;
     font-size: 18px;
 }
+
 td {
-    height: 50px;
     font-size: 16px;
+    color: rgb(112, 112, 137);
 }
 
 img {
