--- a/contact.css
+++ b/contact.css
@@ -1,10 +1,7 @@
 * {
     font-family: Josefin Sans; 
-    letter-spacing: 0.3px;
+    letter-spacing: 0.5px;
     color: rgb(53, 73, 92);
-    flex-direction: row; 
-    justify-content: center;
-    text-align: left;
 }
 
 nav {
@@ -22,21 +19,21 @@ nav th{
     width: 200px;
 }
 
+nav a {
+    font-size: 18px;
+    color: rgb(53, 73, 92);
+    text-decoration: none;
+}
+
 .container {
     background-image: url('1.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 600px;
     display: flex;
-    align-items: center;
-}
-
-.form {
-    display: flex;
-    display: inline-block;
     flex-direction: row; 
     justify-content: center;
-    text-align: left;
+    align-items: center;
 }
 
 input,
