--- a/contact.css
+++ b/contact.css
@@ -26,7 +26,8 @@ nav a {
 }
 
 .container {
-    background-image: url('1.jpg');
+    
+    background-image: url('contact.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 600px;
