--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ nav {
 
 nav th{
     width: 200px;
+    text-align: center;
 }
 
 nav a {
@@ -25,19 +26,35 @@ nav a {
     text-decoration: none;
 }
 
+
+a {
+    font-size: 18px;
+    color: rgb(53, 73, 92);
+    text-decoration: none;
+}
+
+a:hover {
+    color: darkseagreen;
+    font-size: 20px; 
+}
+
+footer p{
+    text-align: right;
+    margin-right: 30px;
+    font-size: 13px;
+    font-weight: lighter;
+}
+
+
 #Lienchu {
     margin: 25px 0 30px 0;
-    padding-left: 20px ;
+    padding: 0 20px 20px 20px;
+    line-height: 25px;
 }
 
 #knowledge {
     margin: 25px 0 30px 0;
-    padding-left: 20px ;
-}
-
-nav th{
-    width: 200px;
-    text-align: center;
+    padding: 0 20px 20px 20px;
 }
 
 .flexbox-container {
@@ -50,6 +67,11 @@ nav th{
 .container {
     text-align: left;
     width: 600px;
+}
+
+.box:hover {
+    box-shadow: 2px 2px 2px 2px #92a2a8;
+    transition: 0.3s;  
 }
 
 table{
@@ -65,45 +87,39 @@ th {
 td {
     font-size: 16px;
     color: rgb(112, 112, 137);
+    font-weight: lighter;
+}
+
+.i th { 
+    width: 100px;
+    height: 50px;
 }
 
 img {
-    margin: 30PX;
+    margin: 30px;
     border-radius: 30px;
 }
 
+img:hover {
+    box-shadow: 2px 2px 2px 2px #92a2a8;
+    transition: 0.3s;  
+}
+
 h3 {
-    padding: 6px;
-    width: 100%;
+padding: 10px 0 10px 0;
+    width: 600px;
     background-color: rgb(63, 76, 85);
     color: white;
     font-size: 16px;
     border-radius: 3px;
 }
 
-a {
-    font-size: 18px;
-    color: rgb(53, 73, 92);
-    text-decoration: none;
-}
 
-a:hover {
-    color: darkseagreen;
-}
 
-.intouch {
-    background-color: rgb(240, 219, 219);
-}
-
-i { font-size: 30px;}
+i { font-size: 35px;}
 
 i:hover {
     color: darkseagreen;
+    font-size: 40px; 
 }
 
-footer p{
-    text-align: right;
-    margin-right: 30px;
-    font-size: 13px;
-    font-weight: lighter;
-}
