Edited about me

--- a/contact.css
+++ b/contact.css
@@ -45,7 +45,7 @@ footer p{
 }
 
 .container {
-    background-image: url('/img/contact.jpeg');
+    background-image: url('/img/contact.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 668px;
