--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ footer p{
 }
 
 .box:hover {
-    box-shadow: 2px 2px 2px 2px #92a2a8;
+    box-shadow: 0 1px  #92a2a8;
     transition: 0.3s;  
 }
 
@@ -91,18 +91,13 @@ td {
 }
 
 .i th { 
-    width: 100px;
+    width: 50px;
     height: 50px;
 }
 
-img {
+#me {
     margin: 30px;
-    border-radius: 30px;
-}
-
-img:hover {
-    box-shadow: 2px 2px 2px 2px #92a2a8;
-    transition: 0.3s;  
+    border-radius: 20px;
 }
 
 h3 {
@@ -115,11 +110,8 @@ padding: 10px 0 10px 0;
 }
 
 
-
-i { font-size: 35px;}
-
-i:hover {
-    color: darkseagreen;
-    font-size: 40px; 
+#icon:hover {
+    transform: scale(1.05,1.05);
+    box-shadow: 2px 2px 2px 2px rgb(207, 211, 207);
 }
 
