--- a/style.css
+++ b/style.css
@@ -90,13 +90,13 @@ td {
     font-weight: lighter;
 }
 
-.i th { 
-    width: 50px;
+.icon th { 
+    width: 70px;
     height: 50px;
 }
 
 #me {
-    margin: 30px;
+    margin: 40px 90px 20px 40px;
     border-radius: 20px;
 }
 
@@ -112,6 +112,5 @@ padding: 10px 0 10px 0;
 
 #icon:hover {
     transform: scale(1.05,1.05);
-    box-shadow: 2px 2px 2px 2px rgb(207, 211, 207);
 }
 
