--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     font-family: Josefin Sans; 
-    letter-spacing: 0.5px;
+    letter-spacing: 0.2px;
     color: rgb(53, 73, 92);
 }
 
@@ -50,6 +50,8 @@ footer p{
     margin: 25px 0 30px 0;
     padding: 0 20px 20px 20px;
     line-height: 25px;
+    font-weight: 600;
+    font-size: 18px;
 }
 
 #knowledge {
@@ -70,7 +72,7 @@ footer p{
 }
 
 .box:hover {
-    box-shadow: 0 1px  #92a2a8;
+    box-shadow: 0.1px 2px  #b8c7cc;
     transition: 0.3s;  
 }
 
