Edited link of font-family

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: Josefin Sans; 
+    font-family: 'Josefin Sans', sans-serif;
     letter-spacing: 0.2px;
     color: rgb(53, 73, 92);
 }
