--- a/portfolio.css
+++ b/portfolio.css
@@ -1,7 +1,16 @@
 * {
-    font-family: Josefin Sans; 
+    font-family: Josefin Sans;
     letter-spacing: 0.5px;
     color: rgb(53, 73, 92);
+    box-sizing: border-box;
+}
+
+body {
+    background-image: url("/img/background2.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+    width: 100vw;
 }
 
 nav {
@@ -9,13 +18,13 @@ nav {
     width: 100%;
     background-color: rgb(241, 241, 238);
     display: flex;
-    flex-direction: row; 
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     border-radius: 3px;
 }
 
-nav th{
+nav th {
     width: 200px;
     text-align: center;
 }
@@ -26,70 +35,137 @@ nav a {
     text-decoration: none;
 }
 
+a:hover {
+    color: darkseagreen;
+}
 
-a {
-    font-size: 18px;
-    color: rgb(53, 73, 92);
+.wraper {
+    height: 85vh;
+    width: 60vw;
+    margin: auto;
+    position: relative;
+}
+
+.wraper h1 {
+    margin-top: 5vh;
+    color: white;
+    text-align: center;
+}
+
+.fa-regular {
+    font-size: 12px;
+    color: white;
+}
+
+.menu {
+    margin-top: 50px;
+    list-style: none;
+    display: block;
+    text-transform: uppercase;
+    padding-left: 0;
+}
+
+.menu-list {
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    background-color: rgba(0, 0, 0, 0.3);
+    margin-top: 5px;
+    padding-top: 20px;
+    height: 65px;
+    width: 25vw;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 12px;
+    color: white;
+}
+
+.menu-item-list {
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    background-color: rgba(0, 0, 0, 0.3);
+    color: white;
+    border-radius: 10px;
+    height: 50px;
+    width: 35vw;
+    padding-top: 19px;
+    font-size: 12px;
+}
+
+.menu-item:nth-child(1) {
+    position: absolute;
+    right: 0;
+}
+
+.menu-item:nth-child(2) {
+    position: absolute;
+    right: 0;
+
+}
+
+.menu-list:hover {
+    background-color: rgba(255, 255, 255, 0.3);
+    color: darkseagreen;
+    padding-bottom: 130px;
+    transition: 0.5s;
+}
+
+.menu-item li:hover {
+    background-color: rgba(255, 255, 255, 0.3);
+    color: darkseagreen;
+    transition: 0.5s;
+}
+
+.menu-item {
+    display: none;
+    list-style: none;
+}
+
+.menu-list a {
+    color: rgb(255, 255, 255);
     text-decoration: none;
 }
 
-a:hover {
-    color: darkseagreen;
-    font-size: 20px; 
+.menu-list:hover>ul {
+    display: inline-block;  
 }
 
-footer p{
+footer p {
     text-align: right;
     margin-right: 30px;
     font-size: 13px;
+    font-weight: lighter;
+    color: white;
 }
 
 
-table {
-    margin: 20px 20px 20px 10px;
-    padding: 20px;
+@media (min-width: 1440px) and (max-width: 2559px) {
+
+    .wraper {
+        width: 35vw;
     }
-    
-th, td {
-    padding: 1px 2px 1px 2px;
+
+    .menu-list {
+        width: 10vw;
+        font-size: 14px;
+    }
+
+    .menu-item-list {
+        width: 25vw;
+    }
+
 }
 
-a {
-    font-size: 18px;
-    color: rgb(53, 73, 92);
-    text-decoration: none;
-}
+@media (min-width: 2560px) {
 
-a:hover {
-    color: darkseagreen;
-    font-size: 20px; 
-}
+    .wraper {
+        width: 30vw;
+    }
 
-h1:hover {
-    color: darkseagreen;
-}
+    .menu-list {
+        width: 8vw;
+        font-size: 16px;
+    }
 
-h1 {
-    color:rgb(53, 73, 92);
-    background-color: rgb(241, 241, 238);;
-    width: 330px;
-    font-size: 38px;
-    height: 90px;
-    text-align: end;
-    border-radius: 5px;
-}
+    .menu-item-list {
+        width: 22vw;
+    }
 
-.container {
-    width: 100%;
-    height: 700px;
-    display: flex;
-    flex-direction: row; 
-    justify-content: center;
-    align-items: center;
 }
-
-img {
-    width: 180px;
-    border-radius: 10px;
-}
-
