--- a/Moment6_CSS/moment6.css
+++ b/Moment6_CSS/moment6.css
@@ -27,7 +27,7 @@ legend {
 }
 
 .wrapper {
-    width: 100%;
+    width: 70vw;
     height: 70vh;
     margin: auto;
 }
@@ -42,7 +42,7 @@ h1 {
 
 .formular {
     background-color: rgba(67, 69, 69, 0.5);
-    width: 80%;
+    width: 80vw;
     height: 300px;
     margin: 80px auto;
     display: flex;
@@ -53,7 +53,7 @@ input {
     border: 1px solid white;
     border-radius: 5px;
     display: inline-block;
-    margin: 0 25px 0 30px;
+    margin: 5px 25px;
     width: 80%;
     height: 15px;
     font-size: 14px;
@@ -71,7 +71,7 @@ label {
     display: inline-block;
     width: 50%;
     height: 20px;
-    margin: 15px 25px 0 35px;
+    margin: 5px 25px;
     font-size: 15px;
 }
 
